# restaurant-voice-order-saas

./: .gitignore  AGENTS.md  AGENT_ROLES.md  AI_HARNESS.md  ARCHITECTURE.md  BUGS.md  CODE_REVIEW.md  DECISIONS.md  LESSONS_LEARNED.md  LICENSE  PLAN.md  PROJECT_CONTEXT.md  README.md  SKILL.md  SKILLS.md  SPEC.md  TASKS.md  TECH_RADAR.md  VALIDATION.md  database.md  devops.md  frontend.md  java-spring.md  security.md
.compatibility/: ai-voice.md  database.md  devops.md  flutter.md  frontend.md  java-spring.md  nodejs.md  python-fastapi.md  realtime.md  security.md
services/api/: .env.example  README.md  alembic.ini  pyproject.toml
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_base_schema.py
services/api/src/: main.py
services/api/src/adapters/http/: admin_routes.py  auth_routes.py  order_routes.py
services/api/src/adapters/websocket/: realtime_routes.py
services/api/src/application/admin/: __init__.py  memory.py  use_cases.py
services/api/src/application/auth/: __init__.py  memory.py  use_cases.py
services/api/src/application/orders/: memory.py  use_cases.py
services/api/src/application/realtime/: events.py  memory.py
services/api/src/domain/: admin.py  order.py  user.py
services/api/src/infrastructure/: realtime.py  settings.py
services/api/src/infrastructure/database/: __init__.py  engine.py
services/api/src/infrastructure/security/: __init__.py  passwords.py  tokens.py
services/api/tests/: test_admin_crud.py  test_auth.py  test_health.py  test_migrations.py  test_order_lifecycle.py  test_realtime.py
(+14 files in other folders)
